// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination itemCount < pageSize 1`] = `
<div>
  <div
    class="horizontal layout-spacing-undefined main container padding padding-top padding-top-medium padding-bottom padding-bottom-medium flex flex-align flex-align-center-center flex-distribution flex-distribution-space-between"
  >
    <span
      class="font main inline inline-true font-variation font-variation-small-semi"
    >
      5
       of 
      5
    </span>
    <div
      class="horizontal layout-spacing-undefined main"
    >
      <button
        class="bp3-button bp3-disabled button font main roundedButton buttonLeft with-current-color withLeftIcon size small"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-arrow-left main padding padding-right padding-right-xsmall"
          icon="arrow-left"
        >
          <svg
            data-icon="arrow-left"
            height="12"
            viewBox="0 0 16 16"
            width="12"
          >
            <desc>
              arrow-left
            </desc>
            <path
              d="M13.99 6.99H4.41L7.7 3.7a1.003 1.003 0 00-1.42-1.42l-5 5a1.014 1.014 0 000 1.42l5 5a1.003 1.003 0 001.42-1.42L4.41 8.99H14c.55 0 1-.45 1-1s-.46-1-1.01-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Prev
        </span>
      </button>
      <button
        class="bp3-button bp3-disabled button font main roundedButton selected with-current-color"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          1
        </span>
      </button>
      <button
        class="bp3-button bp3-disabled button font main roundedButton buttonRight with-current-color withRightIcon size small"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          Next
        </span>
        <span
          class="bp3-icon bp3-icon-arrow-right main"
          icon="arrow-right"
        >
          <svg
            data-icon="arrow-right"
            height="12"
            viewBox="0 0 16 16"
            width="12"
          >
            <desc>
              arrow-right
            </desc>
            <path
              d="M14.7 7.29l-5-5a.965.965 0 00-.71-.3 1.003 1.003 0 00-.71 1.71l3.29 3.29H1.99c-.55 0-1 .45-1 1s.45 1 1 1h9.59l-3.29 3.29a1.003 1.003 0 001.42 1.42l5-5c.18-.18.29-.43.29-.71s-.12-.52-.3-.7z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
    <span>
      Showing 10 per page
    </span>
  </div>
</div>
`;

exports[`Pagination pageCount < 8 1`] = `
<div>
  <div
    class="horizontal layout-spacing-undefined main container padding padding-top padding-top-medium padding-bottom padding-bottom-medium flex flex-align flex-align-center-center flex-distribution flex-distribution-space-between"
  >
    <span
      class="font main inline inline-true font-variation font-variation-small-semi"
    >
      (1 - 10) of 30
    </span>
    <div
      class="horizontal layout-spacing-undefined main"
    >
      <button
        class="bp3-button bp3-disabled button font main roundedButton buttonLeft with-current-color withLeftIcon size small"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-arrow-left main padding padding-right padding-right-xsmall"
          icon="arrow-left"
        >
          <svg
            data-icon="arrow-left"
            height="12"
            viewBox="0 0 16 16"
            width="12"
          >
            <desc>
              arrow-left
            </desc>
            <path
              d="M13.99 6.99H4.41L7.7 3.7a1.003 1.003 0 00-1.42-1.42l-5 5a1.014 1.014 0 000 1.42l5 5a1.003 1.003 0 001.42-1.42L4.41 8.99H14c.55 0 1-.45 1-1s-.46-1-1.01-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Prev
        </span>
      </button>
      <button
        class="bp3-button bp3-disabled button font main roundedButton selected with-current-color"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          1
        </span>
      </button>
      <button
        class="bp3-button button font main roundedButton with-current-color"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          2
        </span>
      </button>
      <button
        class="bp3-button button font main roundedButton with-current-color"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          3
        </span>
      </button>
      <button
        class="bp3-button button font main roundedButton buttonRight with-current-color withRightIcon size small"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          Next
        </span>
        <span
          class="bp3-icon bp3-icon-arrow-right main"
          icon="arrow-right"
        >
          <svg
            data-icon="arrow-right"
            height="12"
            viewBox="0 0 16 16"
            width="12"
          >
            <desc>
              arrow-right
            </desc>
            <path
              d="M14.7 7.29l-5-5a.965.965 0 00-.71-.3 1.003 1.003 0 00-.71 1.71l3.29 3.29H1.99c-.55 0-1 .45-1 1s.45 1 1 1h9.59l-3.29 3.29a1.003 1.003 0 001.42 1.42l5-5c.18-.18.29-.43.29-.71s-.12-.52-.3-.7z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
    <span>
      Showing 10 per page
    </span>
  </div>
</div>
`;

exports[`Pagination pageCount >= 8 1`] = `
<div>
  <div
    class="horizontal layout-spacing-undefined main container padding padding-top padding-top-medium padding-bottom padding-bottom-medium flex flex-align flex-align-center-center flex-distribution flex-distribution-space-between"
  >
    <span
      class="font main inline inline-true font-variation font-variation-small-semi"
    >
      (1 - 10) of 100
    </span>
    <div
      class="horizontal layout-spacing-undefined main"
    >
      <button
        class="bp3-button bp3-disabled button font main roundedButton buttonLeft with-current-color withLeftIcon size small"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-arrow-left main padding padding-right padding-right-xsmall"
          icon="arrow-left"
        >
          <svg
            data-icon="arrow-left"
            height="12"
            viewBox="0 0 16 16"
            width="12"
          >
            <desc>
              arrow-left
            </desc>
            <path
              d="M13.99 6.99H4.41L7.7 3.7a1.003 1.003 0 00-1.42-1.42l-5 5a1.014 1.014 0 000 1.42l5 5a1.003 1.003 0 001.42-1.42L4.41 8.99H14c.55 0 1-.45 1-1s-.46-1-1.01-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Prev
        </span>
      </button>
      <button
        class="bp3-button bp3-disabled button font main roundedButton selected with-current-color"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          1
        </span>
      </button>
      <button
        class="bp3-button button font main roundedButton with-current-color"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          2
        </span>
      </button>
      <button
        class="bp3-button button font main roundedButton with-current-color"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          3
        </span>
      </button>
      <button
        class="bp3-button button font main roundedButton with-current-color"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          4
        </span>
      </button>
      <button
        class="bp3-button button font main roundedButton with-current-color"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          5
        </span>
      </button>
      <button
        class="bp3-button button font main roundedButton with-current-color"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          6
        </span>
      </button>
      <button
        class="bp3-button button font main roundedButton with-current-color"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          7
        </span>
      </button>
      <button
        class="bp3-button button font main roundedButton with-current-color"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          8
        </span>
      </button>
      <button
        class="bp3-button button font main roundedButton with-current-color"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          9
        </span>
      </button>
      <button
        class="bp3-button button font main roundedButton with-current-color"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          10
        </span>
      </button>
      <button
        class="bp3-button button font main roundedButton buttonRight with-current-color withRightIcon size small"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          Next
        </span>
        <span
          class="bp3-icon bp3-icon-arrow-right main"
          icon="arrow-right"
        >
          <svg
            data-icon="arrow-right"
            height="12"
            viewBox="0 0 16 16"
            width="12"
          >
            <desc>
              arrow-right
            </desc>
            <path
              d="M14.7 7.29l-5-5a.965.965 0 00-.71-.3 1.003 1.003 0 00-.71 1.71l3.29 3.29H1.99c-.55 0-1 .45-1 1s.45 1 1 1h9.59l-3.29 3.29a1.003 1.003 0 001.42 1.42l5-5c.18-.18.29-.43.29-.71s-.12-.52-.3-.7z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
    <span>
      Showing 10 per page
    </span>
  </div>
</div>
`;
